# cargo-floki

./: .gitignore  Cargo.toml  LICENSE  README.md  floki.toml
floki_projects/app/src/: lib.rs
floki_projects/client/src/: main.rs
src/: cargo.rs  config.rs  main.rs  projects.rs
