workspace = { members = ["floki_projects/app", "floki_projects/client"] }
[package]
name = "cargo-floki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
thiserror = "1.0.53"
log = "0.4.20"
simplelog = { version = "0.12.1", features = ["paris"] }
xshell = "0.2.5"
